Fix layout on mobile

--- a/style.css
+++ b/style.css
@@ -370,10 +370,8 @@ mark {
     }
 
     .container {
-        padding-left: 50px;
         padding-right: 50px;
-        width: initial;
-        max-width: initial;
+        max-width: 80vw;
     }
 
     .photo {
